# django-ultratenant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUITION.md  CONTRIBUITION.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-publish.yml
contrib/: .env-example
contrib/start_project/: manage_tenants.py  migrate_tenants.py  settings-example.py
contrib/start_project/multitenant/: databases.py  middlewares.py  utils.py
docs/: Makefile  conf.py  contributing.rst  index.rst  make.bat
test_app/: asgi.py  settings.py
test_app/core/: apps.py
test_multidb/: manage.py
test_multidb/test_multidb/: asgi.py  settings.py  urls.py  wsgi.py
test_multidb/tests/: test_multidb.py
test_project/: __init__.py  __main__.py  project.py
test_project/core/: models.py
test_project/multidb/: models.py
test_project/singledb/: models.py
tests/: __init__.py  conftest.py  test_database.py  test_database_router.py  test_dbrouter.py  test_mapper.py  test_middleware.py  test_middlewares.py  test_multidb.py  test_repository.py  test_router.py  test_singledb.py  test_singledb_with_middlewares.py  test_sqlite_mapper.py  test_threadlocal.py  test_ultratenant.py
tests/test_databases/: test_singledb.py
ultratenant/: __init__.py  database.py  databases.py  middleware.py  middlewares.py  models.py  multidb.py  singledb.py  threadlocal.py
ultratenant/migrations/: 0001_initial.py
